--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,23 @@
 .App {
+  margin: -10px;
+  text-align: center;
+}
+html,
+body {
+  margin: 0px;
+  padding: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
+  height: max-content;
+  font-family: Poppins !important;
+  
+  background-color: rgb(119, 117, 117);
+}
+html{
+  font-family: Poppins !important;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +54,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
